--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="project-info">
         </div>
         <div style="padding:56.25% 0 0 0;position:relative;z-index:0;">
-          <iframe src="https://player.vimeo.com/video/280170432?autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/CZNsstTJULY?controls=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
         </div>
         <img class="project-image" src="img/STREET01.jpg" alt="">
         <img class="project-image" src="img/STREET02.jpg" alt="">
