--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
         <h2 class="project-header">Worldide Liberation Movement</h2>
         <button class="info-button" type="button" name="button">Info</button>
         <div class="project-info">
+          <p>Social movements after a certain points dies. Either internally,
+by factionalism, or by heavy repression, or most of the times
+both, leading to encapsulation, instrumentalisation and assimilation
+by the same structures they were fighting. What happens
+when social movement overcome that issue? And how
+such an event would be saved, archived and transmitted?
+That is what i explore in Future Sights, where I speculate
+on such matters and create a timeline recalling the key
+events of this worldwide change in social and power relations,
+from a student revolt, to self-managed areas, to new or
+older ways of handling territories, resources and social interactions.
+This also happens through the use of propaganda.
+Then I create a 3D space where the archiving and exhibition
+of this event can be visited and experienced digitally,
+with a soundscape fitting each part of the space.</p>
         </div>
         <div style="padding:56.25% 0 0 0;position:relative;z-index:0;">
           <iframe src="https://www.youtube.com/embed/CZNsstTJULY?controls=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
